--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>我的第一個網頁</title>
 </head>
 <body>
-    
+    <h1>Hi</h1>
+    <h2>I'm michael</h2>
+    <h3>CCsong 7414</h3>
 </body>
 </html>
